# babbies_tracker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Kconfig  README.md  prj.conf  project_layout.txt  west.yml
boards/arm/babbies_tracker/: CMakeLists.txt  Kconfig  Kconfig.babbies_tracker  Kconfig.defconfig  Kconfig.mcuboot  Kconfig.sysbuild  adp5360_init.c  babbies_tracker_nrf52840.dts  babbies_tracker_nrf52840.yaml  babbies_tracker_nrf52840_defconfig  babbies_tracker_nrf9160.dts  babbies_tracker_nrf9160.yaml  babbies_tracker_nrf9160_common-pinctrl.dtsi  babbies_tracker_nrf9160_common.dtsi  babbies_tracker_nrf9160_ns.dts  babbies_tracker_nrf9160_ns.yaml  babbies_tracker_nrf9160_ns_defconfig  babbies_tracker_nrf9160_partition_conf.dtsi  babbies_tracker_pm_static.yml  board.cmake  board.yml  pm_static.yml  sysbuild.cmake
boards/arm/babbies_tracker/dts/bindings/: iomico,babbies_tracker-nrf52840-reset.yaml
custom_modules/: CMakeLists.txt  Kconfig
custom_modules/bme680_driver/include/my_drivers/: my_bme680.h
custom_modules/drivers/sensor/by_bme680/: my_bme680.c
custom_modules/drivers/sensor/our_bme680/: CMakeLists.txt  Kconfig  bme680_i2c.c  bme680_spi.c  our_bme680.c
custom_modules/dts/bindings/sensor/: our,bme680.yaml
custom_modules/include/our_drivers/: our_bme680.h
custom_modules/zephyr/: module.yml
dts/bindings/: vendor-prefixes.txt
src/: main.cpp
src/services/: CMakeLists.txt  settings_storage.cpp  settings_storage.h  system_manager.cpp  system_manager.h
